[FIX] Remove loader for menu pages + [ADD] Mailto when clicking on contact in footer + [ADD] Text overflow for menu pages

--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -11,118 +11,6 @@ main {
     position: relative;
 }
 
-/* LOADER */
-
-.loader {
-    position: fixed;
-    min-height: 100vh;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: #fff;
-    z-index: 9999;
-    animation: fill 2s;
-    animation-fill-mode: forwards;
-    pointer-events: none;
-}
-
-.wine-glass {
-    height: 50px;
-    width: 50px;
-    border: 3px solid #000;
-    border-radius: 0 0 50% 50%;
-    background-repeat: repeat-x;
-    position: relative;
-    overflow: hidden;
-}
-
-.glass-stem {
-    height: 50px;
-    width: 5px;
-    background: #000;
-}
-
-.glass-base {
-    height: 10px;
-    width: 35px;
-    background: #000;
-    border-radius: 50%;
-}
-
-
-@keyframes fill {
-    0% {
-        opacity: 1;
-    }
-    65% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
-}
-
-/* PARTIE LOADER 2 */
-
-.container {
-    position: absolute;
-    bottom: 0;
-    width: 50px;
-    height: 25px;
-    animation: up-wine-contain 2s infinite;
-}
-
-@keyframes up-wine-contain {
-    from { transform: translateY(0);}
-    to { transform: translateY(-25px);}
-}
-
-.container::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 0px;
-    background: #AA1717;
-    top: 100%;
-    animation: up-wine 2s infinite;
-}
-
-@keyframes up-wine {
-    from { height: 0px;}
-    to { height: 25px;}
-}
-
-.wrapper {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #AA1717;
-    overflow: hidden;
-}
-
-.wave {
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    top: -150%;
-    left: 50%;
-    margin-left: -100%;
-    margin-top: -100%;
-    border-radius: 40%;
-    background: white;
-    animation: wave 4s infinite linear;
-}
-
-@keyframes wave {
-    from { transform: rotate(0deg);}
-    from { transform: rotate(360deg);}
-} */
-
-/* FIN LOADER */
-
 /* HEADER */
 
 header {
@@ -183,6 +71,41 @@ header {
 .mainPartMenu {
     list-style: none;
 }
+
+/*===========================================
+
+=============================================*/
+.titrePartieRestau {
+    opacity: 0;
+    animation: apparitionTitrePartieRestau 1s forwards;
+}
+
+@keyframes apparitionTitrePartieRestau {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+.titrePartieRestau:nth-of-type(1) {
+    animation-delay: 0;
+}
+
+.titrePartieRestau:nth-of-type(2) {
+    animation-delay: 1s;
+}
+
+.titrePartieRestau:nth-of-type(3) {
+    animation-delay: 2s;
+}
+
+/*===========================================
+
+=============================================*/
 
 .topNameRestau {
     padding-left: 17px;
@@ -248,10 +171,12 @@ header {
     margin: 0 13px;
     flex-direction: column;
     justify-content: center;
-    padding: 12px 15px;
+    padding: 0 15px;
     cursor: pointer;
     overflow: hidden;
     transition: .25s;
+    height: 69px;
+    max-height: 69px;
 }
 
 .buttonChoixRestaurant:hover {
@@ -278,16 +203,17 @@ header {
     font-weight: 500;
     font-size: 18px;
     margin-bottom: 5px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
-.buttonChoixRestaurant p {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 15.0431px;
+.buttonChoixRestaurant .bottomChoix {
+    display: flex;
+    align-items: center;
 }
 
-.buttonChoixRestaurant h4 {
+.buttonChoixRestaurant .bottomChoix h4 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -295,6 +221,17 @@ header {
     margin-left: auto;
     margin-right: 10px;
 }
+
+.buttonChoixRestaurant .bottomChoix p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 15.0431px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 200px;
+}   
 
 .bottomChoix {
     display: flex;
@@ -352,6 +289,11 @@ footer h3 {
     font-weight: 400;
     font-size: 18px;
     margin-bottom: 18px;
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
 }
 
 footer .containerFooter {
