--- a/CSS/style.css
+++ b/CSS/style.css
@@ -84,7 +84,7 @@ main {
     position: absolute;
     width: 100%;
     height: 0px;
-    background: #AA1717;
+    background: #d86ddb;
     top: 100%;
     animation: up-wine 3s infinite;
 }
@@ -98,7 +98,7 @@ main {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #AA1717;
+    background: linear-gradient(193.33deg, #9356DC -11.44%, #FF79DA 123.93%);;
     overflow: hidden;
 }
 
@@ -408,6 +408,11 @@ footer .containerFooter {
     flex-wrap: wrap;
     padding: 0;
     flex-direction: column;
+}
+
+footer a {
+    text-decoration: none;
+    color: white;
 }
 
 .containerFooter li {
